@@ -59,19 +59,6 @@ BUGLIST:
   overfilled, libgtk sometimes segfaults (TreeModel changed but did
   not notify TreeView?)
 
-- fix memory holes during use of time_field_to_string() and co.
-
-- when deleting an entry in a sort tab -> data is not marked as changed.
-
-- when deleting an entry in a sort tab and the entry is currently in
-  "edit mode" (i.e. the name could be changed by entering text), the
-  entry is deleted, but the next entry is named according to the
-  deleted entry. We had the same problem in the song view, but I think
-  this got solved by explicetely deselecting the song before deleting
-  it. Deselecting all in the sort tabs doesn't seem to (always) solve
-  it -> some race condition? How can we avoid the context menu being
-  called while editing the field???
-
 - when deleting an entry in the last sort tab (of 2):
 
 jcs@hatarakibachi:~/source/gtkpod/gtkpod$ 
